--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Simple Counter Application</title>
         <script src="https://cdn.tailwindcss.com"></script>
+        <script src="https://unpkg.com/redux@4.2.0/dist/redux.min.js"></script>
     </head>
     <body>
         <div class="w-screen h-screen p-10 bg-gray-100 text-slate-700">
@@ -19,15 +20,17 @@
                 <div
                     class="p-4 h-auto flex flex-col items-center justify-center space-y-5 bg-white rounded shadow"
                 >
-                    <div class="text-2xl font-semibold">0</div>
+                    <div class="text-2xl font-semibold" id="count"></div>
                     <div class="flex space-x-3">
                         <button
                             class="bg-indigo-400 text-white px-3 py-2 rounded shadow"
+                            id="increase"
                         >
                             Increment
                         </button>
                         <button
                             class="bg-red-400 text-white px-3 py-2 rounded shadow"
+                            id="decrease"
                         >
                             Decrement
                         </button>
